<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="101"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:visible="false"
        android:orderInCategory="102"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>
