<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityDetail"
    tools:showIn="@layout/activity_detail2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="221dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true">

            </android.support.v4.view.ViewPager>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:drawableLeft="@android:drawable/sym_action_call"
            android:text="0612423061"
            app:layout_constraintEnd_toStartOf="@+id/textView1"
            tools:layout_editor_absoluteY="102dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_list_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_category"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_event_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_creation_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_attach_money_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_place_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_city"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_contacts_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_author"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_email_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/textview_email"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:onClick="sendEmail"
            android:visibility="invisible" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>